--- a/public/css/additional-sticker-public.css
+++ b/public/css/additional-sticker-public.css
@@ -87,10 +87,10 @@
 
 .sticker-logo-thumb {
     background-color: #00000000;
-    height: 25px;
-    width: 25px;
+    height: 30px;
+    width: 30px;
 
-    margin: 2px;
+    margin: 3px 18px;
     padding: 7px;
 
     border-radius: 3px;
@@ -112,8 +112,8 @@
 /*表情样式*/
 .sticker-img {
     display: inline;
-    height: 45px;
-    width: 45px;
+    height: 50px;
+    width: 50px;
     padding: 5px;
     border-radius: 4px;
 
