--- a/public/css/additional-sticker-public.css
+++ b/public/css/additional-sticker-public.css
@@ -1,21 +1,24 @@
 /* panel基本样式及动画  */
 .sticker-panel>img {
-    height: 30px;
-    width: 30px;
+    height: 90%;
+    width: 90%;
 
-    background-color: #f0f0f0;
-    padding: 5px;
     margin: 3px;
-    outline: #e7e7e7 solid 1px;
-    border-radius: 3px;
 }
 
 .sticker-panel label {
-    margin: 0!important;
+    margin: 0 !important;
 }
 
-.text-sticker-img, .sticker-panel>img {
-    /*禁止保存图片*/
+.sticker-panel * {
+    box-sizing: content-box !important;
+    max-width: none !important;
+}
+
+
+/*禁止保存图片*/
+.text-sticker-img {
+
     pointer-events: none;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -24,28 +27,42 @@
     -webkit-touch-callout: none
 }
 
+.sticker-panel img {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    /*iOS*/
+    -webkit-touch-callout: none
+}
+
+
 .sticker-panel {
     box-sizing: content-box !important;
     position: relative;
     /* display: inline-block; */
 
-    height: 30px;
-    width: 30px;
+    height: 3rem;
+    width: 3rem;
+
+    background-color: #f0f0f0;
+    outline: #e7e7e7 solid 1px;
+    border-radius: 3px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
-.sticker-panel * {
-    box-sizing: content-box !important;
-}
 
+/* hover弹出元素 */
 .sticker-popmenu {
-    height: 250px;
-    width: 350px;
+    height: 15rem;
+    width: 23rem;
     background-color: #f8f8f8;
     /*outline: #dddddd solid 2px;*/
     border-radius: 5px;
     box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.15);
     position: absolute;
-    z-index: 10;
+    z-index: 100;
     overflow: hidden;
 
     /* display: none; */
@@ -57,7 +74,7 @@
 .sticker-panel:hover .sticker-popmenu {
     opacity: 1;
     visibility: visible;
-    transition: all 0.25s linear;
+    transition: all 0.2s linear;
 }
 
 
@@ -65,40 +82,45 @@
 /* 顶部选择栏样式 */
 .sticker-rad-list {
     width: 100%;
-    height: fit-content;
+    height: 23%;
     display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
     background-color: #f3f3f3;
-    box-sizing: border-box;
+    box-sizing: border-box !important;
 
-    padding: 0 10px;
+
 
     overflow-x: auto;
     overflow-y: hidden;
 }
 
+
+/* 表情选择radio */
 .sticker-rad {
     appearance: none;
     display: none !important;
-    /**/
 }
 
 .sticker-rad:checked+label img {
     background-color: #e4e4e4;
 
-    transition: all 0.25s linear;
+    transition: all 0.2s linear;
 }
 
+/* logo 样式 */
 .sticker-logo-thumb {
     background-color: #00000000;
-    height: 30px;
-    width: 30px;
+    height: 2em;
+    width: 2em;
 
-    margin: 3px 18px;
-    padding: 7px;
+    margin: 0em 0.4em;
+    padding: 0.4em;
 
     border-radius: 3px;
 
-    transition: all 0.25s linear;
+    transition: all 0.2s linear;
 }
 
 
@@ -106,10 +128,10 @@
 /*选择区样式*/
 .sticker-list {
     height: 80%;
-    padding: 10px 10px;
+    padding: 1em;
     overflow-y: auto;
     overflow-x: hidden;
-    box-sizing: border-box;
+    box-sizing: border-box !important;
 }
 
 /*表情样式*/
@@ -157,13 +179,13 @@
     position: relative;
     bottom: 5px;
     left: 5px;
-    font-size: 10px;
+    font-size: 0.7em;
     color: gray;
 }
 
 
 .text-sticker-img {
     display: inline;
-    height: 45px;
-    width: 45px;
+    height: 3.5em;
+    width: 3.5em;
 }
