--- a/public/css/additional-sticker-public.css
+++ b/public/css/additional-sticker-public.css
@@ -7,11 +7,12 @@
 }
 
 .sticker-panel label {
-    margin: 0 !important;
+    all: initial;
+    margin: 0;
+    padding: 0;
 }
 
 .sticker-panel * {
-    box-sizing: content-box !important;
     max-width: none !important;
 }
 
@@ -20,7 +21,6 @@
         width: 85vw !important;
     }
 }
-
 
 /*禁止保存图片*/
 .text-sticker-img {
@@ -41,14 +41,15 @@
     -webkit-touch-callout: none
 }
 
-
 .sticker-panel {
-    box-sizing: content-box !important;
+    all: initial;
     position: relative;
     /* display: inline-block; */
 
     height: 3rem;
     width: 3rem;
+    flex-basis: 3rem !important;
+    margin: 0em 0.5em 1em 0.5em;
 
     background-color: #f0f0f0;
     outline: #e7e7e7 solid 1px;
@@ -61,8 +62,11 @@
 
 /* hover弹出元素 */
 .sticker-popmenu {
-    height: 15rem;
-    width: 23rem;
+    all: initial;
+    
+    height: 15em;
+    width: 23em;
+    font-size: 16px;
     background-color: #f8f8f8;
     /*outline: #dddddd solid 2px;*/
     border-radius: 5px;
@@ -90,6 +94,9 @@
 
 /* 顶部选择栏样式 */
 .sticker-rad-list {
+    
+    all: initial;/* 防止主题样式污染 */
+
     width: 100%;
     height: 23%;
     display: flex;
@@ -98,8 +105,6 @@
     align-items: center;
     background-color: #f3f3f3;
     box-sizing: border-box !important;
-
-
 
     overflow-x: auto;
     overflow-y: hidden;
@@ -138,6 +143,10 @@
 .sticker-list {
     height: 80%;
     padding: 1em;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
     overflow-y: auto;
     overflow-x: hidden;
     box-sizing: border-box !important;
@@ -146,8 +155,8 @@
 /*表情样式*/
 .sticker-img {
     display: inline;
-    height: 50px;
-    width: 50px;
+    height: 3.2em;
+    width: 3.2em;
     padding: 7px;
     border-radius: 4px;
 
