--- a/admin/css/additional-sticker-admin.css
+++ b/admin/css/additional-sticker-admin.css
@@ -1,4 +1,5 @@
-/**
- * All of the CSS for your admin-specific functionality should be
- * included in this file.
- */
+.text-sticker-img {
+    display: inline;
+    height: 3.5em;
+    width: 3.5em;
+}
