--- a/public/css/additional-sticker-public.css
+++ b/public/css/additional-sticker-public.css
@@ -9,7 +9,7 @@
     height: 3rem;
     width: 3rem;
 
-    margin: 3px;
+    /* margin: 0.2rem; */
 }
 
 .sticker-panel label {
@@ -49,11 +49,12 @@
 .sticker-panel {
     all: initial;
     position: relative;
-    /* display: inline-block; */
+    display: inline-block;
 
     height: 3rem;
     width: 3rem;
     margin: 0em 0.5em 1em 0.5em;
+    /* padding: 0.2em; */
 
     background-color: #f0f0f0;
     outline: #e7e7e7 solid 1px;
@@ -91,21 +92,27 @@
     transition: all 0.2s linear;
 }
 
+.sticker-panel:hover .sticker-rad-list {
+    visibility: visible;
+}
+
 
 
 /* 顶部选择栏样式 */
 .sticker-rad-list {
     /* 防止主题样式污染 */
-    /* all: initial; */
+    all: initial;
 
     width: 100%;
     height: 23%;
+    margin-left: 0.5em;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
     background-color: #f3f3f3;
     box-sizing: border-box;
+    visibility: hidden;
 
     overflow-x: auto;
     overflow-y: hidden;
@@ -152,15 +159,19 @@
     overflow-x: hidden;
 }
 
+.sticker-sublist{
+    columns: 4em;
+}
+
 /*表情样式*/
 .sticker-img {
     box-sizing: border-box;
 
     display: inline;
     
-    height: 4em;
-    width: 4em;
-    padding: 7px;
+    height: 3.9em;
+    width: 3.9em;
+    padding: 4px;
     border-radius: 4px;
 
     background-color: #00000000;
@@ -198,7 +209,7 @@
 /*版权文本样式*/
 .sticker-copyright {
     position: relative;
-    bottom: 5px;
+    /* bottom: 5px; */
     left: 5px;
     font-size: 0.7em;
     color: gray;
