--- a/public/css/additional-sticker-public.css
+++ b/public/css/additional-sticker-public.css
@@ -105,7 +105,7 @@
 
     width: 100%;
     height: 23%;
-    margin-left: 0.5em;
+    padding-left: 0.5em;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
